<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main"
        android:icon="@drawable/ic_sort"
        android:title="Sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_By_Date"
                android:title="Sort by Date">


            </item>

            <item
                android:id="@+id/sort_By_Place"
                android:title="Sort by Place">


            </item>
            <item
                android:id="@+id/reset_sort"
                android:title="Reset sort">


            </item>
        </menu>


    </item>

</menu>