<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container_text_button_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Choisissez une salle :" />

    </RelativeLayout>

    <GridView
        android:id="@+id/place_input_dialog"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:numColumns="3"
        android:hint="Select meeting place"
        />


    <TextView
        android:id="@+id/action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:text="CANCEL"
        android:textColor="#33bbff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/action_ok"
        app:layout_constraintEnd_toEndOf="parent" />


</LinearLayout>